--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DoItWithIT</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background: radial-gradient(circle at top, #001e2b, #000c18);
       color: #aef1ff;
       overflow-x: hidden;
     }
 
-    .language-toggle {
+    .language-switch {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1000;
     }
 
-    .language-toggle button {
+    .language-switch button {
       background: transparent;
       border: 1px solid #00bfff;
       color: #00bfff;
-      margin-left: 5px;
       padding: 5px 10px;
-      border-radius: 5px;
+      margin-left: 5px;
+      border-radius: 4px;
       cursor: pointer;
     }
 
@@ -35,8 +37,8 @@
     }
 
     .header h1 {
-      font-size: 3rem;
       color: #00bfff;
+      font-size: 3rem;
       margin-bottom: 10px;
     }
 
@@ -49,24 +51,24 @@
       position: relative;
       width: 600px;
       height: 600px;
-      margin: 40px auto;
+      margin: 60px auto;
     }
 
     .center-circle {
+      position: absolute;
       width: 160px;
       height: 160px;
-      background-color: transparent;
-      border: 2px solid #00bfff;
-      border-radius: 50%;
-      color: #00bfff;
-      font-size: 1.2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      border: 2px solid #00bfff;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #00bfff;
+      font-size: 1.2rem;
+      text-align: center;
     }
 
     .service {
@@ -83,26 +85,26 @@
       fill: #00bfff;
     }
 
-    .service:nth-child(1) { top: 0%; left: 50%; transform: translate(-50%, 0); } /* Zdalna pomoc */
-    .service:nth-child(2) { top: 20%; left: 85%; transform: translate(-50%, -50%); } /* Instalacja systemu */
-    .service:nth-child(3) { top: 50%; left: 100%; transform: translate(-50%, -50%); } /* Peryferia */
-    .service:nth-child(4) { top: 80%; left: 85%; transform: translate(-50%, -50%); } /* Obsługa firmowa */
-    .service:nth-child(5) { top: 100%; left: 50%; transform: translate(-50%, -100%); } /* Spawanie światłowodów */
-    .service:nth-child(6) { top: 80%; left: 15%; transform: translate(-50%, -50%); } /* Sieci strukturalne */
-    .service:nth-child(7) { top: 50%; left: 0%; transform: translate(-50%, -50%); } /* Obsługa domowa */
+    /* Pozycjonowanie usług na okręgu */
+    .s1 { top: 0%; left: 50%; transform: translate(-50%, 0); }
+    .s2 { top: 20%; left: 85%; transform: translate(-50%, -50%); }
+    .s3 { top: 50%; left: 100%; transform: translate(-100%, -50%); }
+    .s4 { top: 80%; left: 85%; transform: translate(-50%, -50%); }
+    .s5 { top: 100%; left: 50%; transform: translate(-50%, -100%); }
+    .s6 { top: 80%; left: 15%; transform: translate(-50%, -50%); }
+    .s7 { top: 50%; left: 0%; transform: translate(0, -50%); }
 
     @media (max-width: 700px) {
       .circle-container {
-        width: 100%;
-        height: 100%;
-        transform: scale(0.8);
+        transform: scale(0.75);
+        transform-origin: center;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="language-toggle">
+  <div class="language-switch">
     <button>PL</button>
     <button>EN</button>
   </div>
@@ -113,42 +115,47 @@
   </div>
 
   <div class="circle-container">
-    <div class="service">
+
+    <!-- Usługi -->
+    <div class="service s1">
       <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-2h2v2zm1.07-7.75l-.9.92C12.45 10.9 12 11.5 12 13h-2v-.5c0-.8.45-1.5 1.17-1.93l1.24-1.02A2 2 0 1010 7H8a4 4 0 118.07 2.25z"/></svg>
       <div>Zdalna pomoc</div>
     </div>
 
-    <div class="service">
+    <div class="service s2">
       <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4V4zm0 4h16v2H4V8zm0 4h10v2H4v-2zm0 4h10v2H4v-2z"/></svg>
       <div>Instalacja systemu<br>i oprogramowania</div>
     </div>
 
-    <div class="service">
+    <div class="service s3">
       <svg viewBox="0 0 24 24"><path d="M6 6h12v12H6V6zm2 2v8h8V8H8zm-4 0h2v8H4V8zm16 0v8h-2V8h2z"/></svg>
       <div>Instalacja peryferiów</div>
     </div>
 
-    <div class="service">
+    <div class="service s4">
       <svg viewBox="0 0 24 24"><path d="M12 12a4 4 0 100-8 4 4 0 000 8zm-6 8v-2a4 4 0 014-4h4a4 4 0 014 4v2H6z"/></svg>
       <div>Obsługa firmowa</div>
     </div>
 
-    <div class="service">
+    <div class="service s5">
       <svg viewBox="0 0 24 24"><path d="M12 2l4 4h-3v6h-2V6H8l4-4zm-6 8v10h12V10H6z"/></svg>
       <div>Spawanie światłowodów</div>
     </div>
 
-    <div class="service">
+    <div class="service s6">
       <svg viewBox="0 0 24 24"><path d="M12 2l10 9h-3v9H5v-9H2l10-9z"/></svg>
       <div>Instalacje sieci strukturalnych</div>
     </div>
 
-    <div class="service">
+    <div class="service s7">
       <svg viewBox="0 0 24 24"><path d="M12 3l10 9h-4v9h-4v-6H10v6H6v-9H2l10-9z"/></svg>
       <div>Obsługa domowa</div>
     </div>
 
-    <div class="center-circle">DoItWithIT</div>
+    <!-- Centralne koło -->
+    <div class="center-circle">
+      DoItWithIT
+    </div>
   </div>
 
 </body>
