--- a/index.html
+++ b/index.html
@@ -1,162 +1,225 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DoItWithIT</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top, #001e2b, #000c18);
-      color: #aef1ff;
+      background: linear-gradient(to bottom, #0d1e30, #1f3b5c);
+      color: #fff;
       overflow-x: hidden;
     }
 
-    .language-switch {
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: #00bfff;
+    }
+
+    p {
+      color: #ccc;
+      font-size: 1.2rem;
+    }
+
+    .language-toggle {
       position: absolute;
       top: 1rem;
       right: 1rem;
-      z-index: 1000;
     }
 
-    .language-switch button {
-      background: transparent;
-      border: 1px solid #00bfff;
-      color: #00bfff;
-      padding: 5px 10px;
-      margin-left: 5px;
-      border-radius: 4px;
+    .language-toggle button {
+      margin-left: 0.5rem;
+      padding: 0.3rem 0.6rem;
+      border: none;
+      background-color: #003366;
+      color: #fff;
       cursor: pointer;
+      border-radius: 4px;
     }
 
-    .header {
-      text-align: center;
-      margin-top: 80px;
-    }
-
-    .header h1 {
-      color: #00bfff;
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
-
-    .header p {
-      font-size: 1.2rem;
-      color: #c5eaff;
-    }
-
-    .circle-container {
+    .network {
       position: relative;
-      width: 600px;
-      height: 600px;
-      margin: 60px auto;
+      width: 100%;
+      max-width: 1000px;
+      margin: 4rem auto;
+      height: 700px;
     }
 
-    .center-circle {
+    .center {
       position: absolute;
-      width: 160px;
-      height: 160px;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      border: 2px solid #00bfff;
+      background-color: #007acc;
       border-radius: 50%;
+      padding: 2rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
+      border: 3px solid #fff;
+      z-index: 5;
+    }
+
+    .circle {
+      position: absolute;
+      background-color: #003366;
+      color: #fff;
+      border-radius: 50%;
+      width: 130px;
+      height: 130px;
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+      border: 2px solid #00bfff;
+    }
+
+    .circle:hover {
+      transform: scale(1.2);
+      background-color: #0055a5;
+      z-index: 10;
+    }
+
+    .circle svg {
+      margin-bottom: 0.3rem;
+    }
+
+    .circle span {
+      font-size: 0.9rem;
+      color: #fff;
+    }
+
+    .circle:nth-child(2)  { top: 5%;   left: 45%; }
+    .circle:nth-child(3)  { top: 20%;  left: 75%; }
+    .circle:nth-child(4)  { top: 50%;  left: 90%; }
+    .circle:nth-child(5)  { top: 80%;  left: 75%; }
+    .circle:nth-child(6)  { top: 85%;  left: 45%; }
+    .circle:nth-child(7)  { top: 80%;  left: 15%; }
+    .circle:nth-child(8)  { top: 50%;  left: 0%; }
+    .circle:nth-child(9)  { top: 20%;  left: 15%; }
+    .circle:nth-child(10) { top: 35%;  left: 50%; }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #001d3d;
+      color: #ccc;
+    }
+
+    a {
       color: #00bfff;
-      font-size: 1.2rem;
-      text-align: center;
+      text-decoration: none;
     }
 
-    .service {
-      position: absolute;
-      width: 140px;
-      text-align: center;
-      color: #c5eaff;
-    }
+    @media (max-width: 768px) {
+      .network {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+        padding: 2rem;
+      }
 
-    .service svg {
-      width: 48px;
-      height: 48px;
-      margin-bottom: 8px;
-      fill: #00bfff;
-    }
+      .circle {
+        position: static !important;
+        width: 100px;
+        height: 100px;
+      }
 
-    /* Pozycjonowanie usług na okręgu */
-    .s1 { top: 0%; left: 50%; transform: translate(-50%, 0); }
-    .s2 { top: 20%; left: 85%; transform: translate(-50%, -50%); }
-    .s3 { top: 50%; left: 100%; transform: translate(-100%, -50%); }
-    .s4 { top: 80%; left: 85%; transform: translate(-50%, -50%); }
-    .s5 { top: 100%; left: 50%; transform: translate(-50%, -100%); }
-    .s6 { top: 80%; left: 15%; transform: translate(-50%, -50%); }
-    .s7 { top: 50%; left: 0%; transform: translate(0, -50%); }
-
-    @media (max-width: 700px) {
-      .circle-container {
-        transform: scale(0.75);
-        transform-origin: center;
+      .center {
+        position: static;
+        transform: none;
+        margin-bottom: 2rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="language-switch">
-    <button>PL</button>
-    <button>EN</button>
+  <div class="language-toggle">
+    <button onclick="setLanguage('pl')">PL</button>
+    <button onclick="setLanguage('en')">EN</button>
   </div>
 
-  <div class="header">
+  <header>
     <h1>DoItWithIT</h1>
     <p>Realne wsparcie IT dla domu i małych firm</p>
+  </header>
+
+  <div class="network">
+    <div class="center">DoItWithIT</div>
+
+    <div class="circle" data-pl="Zdalna pomoc" data-en="Remote Help">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="M8 20v-4h8v4"/><circle cx="12" cy="10" r="2"/></svg>
+      <span>Zdalna pomoc</span>
+    </div>
+
+    <div class="circle" data-pl="Instalacja systemu i oprogramowania" data-en="System and Software Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14"/><circle cx="12" cy="12" r="2"/><path d="M12 16v2"/></svg>
+      <span>Instalacja systemu</span>
+    </div>
+
+    <div class="circle" data-pl="Konfiguracja sieci" data-en="Network Configuration">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="5" cy="12" r="2"/><circle cx="19" cy="12" r="2"/><line x1="7" y1="12" x2="17" y2="12"/></svg>
+      <span>Konfiguracja sieci</span>
+    </div>
+
+    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="16" height="10"/><line x1="4" y1="14" x2="20" y2="14"/><circle cx="8" cy="18" r="1"/><circle cx="16" cy="18" r="1"/></svg>
+      <span>Instalacja peryferiów</span>
+    </div>
+
+    <div class="circle" data-pl="Obsługa domowa" data-en="Home Support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 12l9-9 9 9"/><path d="M9 21V9h6v12"/></svg>
+      <span>Obsługa domowa</span>
+    </div>
+
+    <div class="circle" data-pl="Obsługa firmowa" data-en="Business Support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="8" cy="8" r="3"/><circle cx="16" cy="8" r="3"/><path d="M5 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/><path d="M15 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/></svg>
+      <span>Obsługa firmowa</span>
+    </div>
+
+    <div class="circle" data-pl="Instalacje strukturalnych sieci teleinformatycznych" data-en="Structured Network Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="6" height="6"/><rect x="14" y="4" width="6" height="6"/><rect x="4" y="14" width="6" height="6"/><rect x="14" y="14" width="6" height="6"/><line x1="10" y1="7" x2="14" y2="7"/><line x1="7" y1="10" x2="7" y2="14"/><line x1="10" y1="17" x2="14" y2="17"/><line x1="17" y1="10" x2="17" y2="14"/></svg>
+      <span>Sieci strukturalne</span>
+    </div>
+
+    <div class="circle" data-pl="Spawanie światłowodów" data-en="Fiber splicing">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2">
+        <path d="M12 2L2 22h20L12 2z"/>
+        <line x1="12" y1="8" x2="12" y2="16" />
+        <circle cx="12" cy="16" r="1.5" />
+      </svg>
+      <span>Spawanie światłowodów</span>
+    </div>
   </div>
 
-  <div class="circle-container">
+  <footer>
+    <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
+    <p>&copy; 2025 DoItWithIT</p>
+  </footer>
 
-    <!-- Usługi -->
-    <div class="service s1">
-      <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-2h2v2zm1.07-7.75l-.9.92C12.45 10.9 12 11.5 12 13h-2v-.5c0-.8.45-1.5 1.17-1.93l1.24-1.02A2 2 0 1010 7H8a4 4 0 118.07 2.25z"/></svg>
-      <div>Zdalna pomoc</div>
-    </div>
-
-    <div class="service s2">
-      <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4V4zm0 4h16v2H4V8zm0 4h10v2H4v-2zm0 4h10v2H4v-2z"/></svg>
-      <div>Instalacja systemu<br>i oprogramowania</div>
-    </div>
-
-    <div class="service s3">
-      <svg viewBox="0 0 24 24"><path d="M6 6h12v12H6V6zm2 2v8h8V8H8zm-4 0h2v8H4V8zm16 0v8h-2V8h2z"/></svg>
-      <div>Instalacja peryferiów</div>
-    </div>
-
-    <div class="service s4">
-      <svg viewBox="0 0 24 24"><path d="M12 12a4 4 0 100-8 4 4 0 000 8zm-6 8v-2a4 4 0 014-4h4a4 4 0 014 4v2H6z"/></svg>
-      <div>Obsługa firmowa</div>
-    </div>
-
-    <div class="service s5">
-      <svg viewBox="0 0 24 24"><path d="M12 2l4 4h-3v6h-2V6H8l4-4zm-6 8v10h12V10H6z"/></svg>
-      <div>Spawanie światłowodów</div>
-    </div>
-
-    <div class="service s6">
-      <svg viewBox="0 0 24 24"><path d="M12 2l10 9h-3v9H5v-9H2l10-9z"/></svg>
-      <div>Instalacje sieci strukturalnych</div>
-    </div>
-
-    <div class="service s7">
-      <svg viewBox="0 0 24 24"><path d="M12 3l10 9h-4v9h-4v-6H10v6H6v-9H2l10-9z"/></svg>
-      <div>Obsługa domowa</div>
-    </div>
-
-    <!-- Centralne koło -->
-    <div class="center-circle">
-      DoItWithIT
-    </div>
-  </div>
+  <script>
+    function setLanguage(lang) {
+      document.querySelectorAll('.circle').forEach(el => {
+        const label = el.querySelector('span');
+        label.textContent = el.getAttribute(`data-${lang}`);
+      });
+    }
+  </script>
 
 </body>
 </html>
