--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     header {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2rem;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 0.5rem;
       color: #00bfff;
     }
@@ -29,35 +29,35 @@
       font-size: 1.2rem;
     }
 
-    .language-toggle {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
+    .lang-switch {
+      text-align: center;
+      margin-top: 1rem;
     }
 
-    .language-toggle button {
-      margin-left: 0.5rem;
-      padding: 0.3rem 0.6rem;
-      border: none;
-      background-color: #003366;
-      color: #fff;
+    .lang-switch button {
+      background: none;
+      border: 1px solid #00bfff;
+      color: #00bfff;
+      padding: 0.5rem 1rem;
+      margin: 0 0.5rem;
       cursor: pointer;
-      border-radius: 4px;
     }
 
     .network {
-      position: relative;
-      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
       max-width: 1000px;
       margin: 4rem auto;
-      height: 700px;
+      position: relative;
     }
 
     .center {
       position: absolute;
-      top: 50%;
+      top: -4rem;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translateX(-50%);
       background-color: #007acc;
       border-radius: 50%;
       padding: 2rem;
@@ -66,50 +66,36 @@
       font-weight: bold;
       box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
       border: 3px solid #fff;
-      z-index: 5;
-    }
-
-    .circle {
-      position: absolute;
-      background-color: #003366;
-      color: #fff;
-      border-radius: 50%;
-      width: 130px;
-      height: 130px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-      border: 2px solid #00bfff;
-    }
-
-    .circle:hover {
-      transform: scale(1.2);
-      background-color: #0055a5;
       z-index: 10;
     }
 
-    .circle svg {
-      margin-bottom: 0.3rem;
-    }
-
-    .circle span {
-      font-size: 0.9rem;
+    .circle {
+      background-color: #003366;
       color: #fff;
+      border-radius: 1rem;
+      padding: 1rem;
+      text-align: center;
+      width: 150px;
+      height: 150px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+      border: 2px solid #00bfff;
+      transition: transform 0.3s ease, background-color 0.3s ease;
     }
 
-    .circle:nth-child(2)  { top: 5%;   left: 45%; }
-    .circle:nth-child(3)  { top: 20%;  left: 75%; }
-    .circle:nth-child(4)  { top: 50%;  left: 90%; }
-    .circle:nth-child(5)  { top: 80%;  left: 75%; }
-    .circle:nth-child(6)  { top: 85%;  left: 45%; }
-    .circle:nth-child(7)  { top: 80%;  left: 15%; }
-    .circle:nth-child(8)  { top: 50%;  left: 0%; }
-    .circle:nth-child(9)  { top: 20%;  left: 15%; }
-    .circle:nth-child(10) { top: 35%;  left: 50%; }
+    .circle:hover {
+      transform: scale(1.1);
+      background-color: #0055a5;
+    }
+
+    .circle svg {
+      width: 32px;
+      height: 32px;
+      margin-bottom: 0.5rem;
+    }
 
     footer {
       text-align: center;
@@ -122,88 +108,60 @@
       color: #00bfff;
       text-decoration: none;
     }
-
-    @media (max-width: 768px) {
-      .network {
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 1rem;
-        padding: 2rem;
-      }
-
-      .circle {
-        position: static !important;
-        width: 100px;
-        height: 100px;
-      }
-
-      .center {
-        position: static;
-        transform: none;
-        margin-bottom: 2rem;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <div class="language-toggle">
-    <button onclick="setLanguage('pl')">PL</button>
-    <button onclick="setLanguage('en')">EN</button>
-  </div>
-
   <header>
     <h1>DoItWithIT</h1>
     <p>Realne wsparcie IT dla domu i małych firm</p>
+    <div class="lang-switch">
+      <button onclick="switchLang('pl')">PL</button>
+      <button onclick="switchLang('en')">EN</button>
+    </div>
   </header>
 
   <div class="network">
     <div class="center">DoItWithIT</div>
 
-    <div class="circle" data-pl="Zdalna pomoc" data-en="Remote Help">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="M8 20v-4h8v4"/><circle cx="12" cy="10" r="2"/></svg>
+    <div class="circle" data-pl="Zdalna pomoc" data-en="Remote help">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M12 1C8.1 1 5 4.1 5 8v4c0 3.9 3.1 7 7 7s7-3.1 7-7V8c0-3.9-3.1-7-7-7z"/><path d="M5 12H3v-2h2"/><path d="M21 12h-2v-2h2"/></svg>
       <span>Zdalna pomoc</span>
     </div>
 
-    <div class="circle" data-pl="Instalacja systemu i oprogramowania" data-en="System and Software Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14"/><circle cx="12" cy="12" r="2"/><path d="M12 16v2"/></svg>
+    <div class="circle" data-pl="Instalacja systemu" data-en="System install">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 17v-2a4 4 0 0 1 4-4h10a4 4 0 0 1 4 4v2"/><path d="M12 3v6"/><path d="M9 6h6"/></svg>
       <span>Instalacja systemu</span>
     </div>
 
-    <div class="circle" data-pl="Konfiguracja sieci" data-en="Network Configuration">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="5" cy="12" r="2"/><circle cx="19" cy="12" r="2"/><line x1="7" y1="12" x2="17" y2="12"/></svg>
+    <div class="circle" data-pl="Konfiguracja sieci" data-en="Network setup">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v4H4zM4 16h16v4H4zM12 8v8"/></svg>
       <span>Konfiguracja sieci</span>
     </div>
 
-    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="16" height="10"/><line x1="4" y1="14" x2="20" y2="14"/><circle cx="8" cy="18" r="1"/><circle cx="16" cy="18" r="1"/></svg>
+    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral install">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14" rx="2"/><path d="M8 20h8M10 16h4"/></svg>
       <span>Instalacja peryferiów</span>
     </div>
 
-    <div class="circle" data-pl="Obsługa domowa" data-en="Home Support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 12l9-9 9 9"/><path d="M9 21V9h6v12"/></svg>
+    <div class="circle" data-pl="Obsługa domowa" data-en="Home support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><path d="M9 22V12h6v10"/></svg>
       <span>Obsługa domowa</span>
     </div>
 
-    <div class="circle" data-pl="Obsługa firmowa" data-en="Business Support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="8" cy="8" r="3"/><circle cx="16" cy="8" r="3"/><path d="M5 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/><path d="M15 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/></svg>
+    <div class="circle" data-pl="Obsługa firmowa" data-en="Business support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M9 3v18M15 3v18"/></svg>
       <span>Obsługa firmowa</span>
     </div>
 
-    <div class="circle" data-pl="Instalacje strukturalnych sieci teleinformatycznych" data-en="Structured Network Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="6" height="6"/><rect x="14" y="4" width="6" height="6"/><rect x="4" y="14" width="6" height="6"/><rect x="14" y="14" width="6" height="6"/><line x1="10" y1="7" x2="14" y2="7"/><line x1="7" y1="10" x2="7" y2="14"/><line x1="10" y1="17" x2="14" y2="17"/><line x1="17" y1="10" x2="17" y2="14"/></svg>
-      <span>Sieci strukturalne</span>
+    <div class="circle" data-pl="Instalacje sieci" data-en="Structured cabling">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 6h16M4 10h16M4 14h10M4 18h6"/></svg>
+      <span>Instalacje sieci</span>
     </div>
 
-    <div class="circle" data-pl="Spawanie światłowodów" data-en="Fiber splicing">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2">
-        <path d="M12 2L2 22h20L12 2z"/>
-        <line x1="12" y1="8" x2="12" y2="16" />
-        <circle cx="12" cy="16" r="1.5" />
-      </svg>
-      <span>Spawanie światłowodów</span>
+    <div class="circle" data-pl="Naprawa światłowodów" data-en="Fiber repair">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M2 12h6l2 2h4l2-2h6"/><path d="M12 2v6m0 8v6"/></svg>
+      <span>Naprawa światłowodów</span>
     </div>
   </div>
 
@@ -213,13 +171,12 @@
   </footer>
 
   <script>
-    function setLanguage(lang) {
+    function switchLang(lang) {
       document.querySelectorAll('.circle').forEach(el => {
         const label = el.querySelector('span');
         label.textContent = el.getAttribute(`data-${lang}`);
       });
     }
   </script>
-
 </body>
 </html>
