--- a/index.html
+++ b/index.html
@@ -170,29 +170,30 @@
     <div class="center">DoItWithIT</div>
 
     <div class="circle" data-key="remote">
-      <img src="img/remote.png" alt="Zdalna pomoc">
-      Zdalna pomoc
-    </div>
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Zdalna pomoc">
+  Zdalna pomoc
+</div>
 
-    <div class="circle" data-key="install">
-      <img src="img/install.png" alt="Instalacja systemu">
-      Instalacja systemu
-    </div>
+<div class="circle" data-key="install">
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja systemu">
+  Instalacja systemu
+</div>
 
-    <div class="circle" data-key="peripherals">
-      <img src="img/peripherals.png" alt="Peryferia">
-      Instalacja peryferiów
-    </div>
+<div class="circle" data-key="business">
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
+  Obsługa firmowa
+</div>
 
-    <div class="circle" data-key="business">
-      <img src="img/business.png" alt="Obsługa firmowa">
-      Obsługa firmowa
-    </div>
+<div class="circle" data-key="peripherals">
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja peryferiów">
+  Instalacja peryferiów
+</div>
 
-    <div class="circle" data-key="home">
-      <img src="img/home.png" alt="Obsługa domowa">
-      Obsługa domowa
-    </div>
+<div class="circle" data-key="home">
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa domowa">
+  Obsługa domowa
+</div>
+
 
     <div class="circle" data-key="network">Konfiguracja sieci</div>
     <div class="circle" data-key="structural">Instalacje strukturalnych<br>sieci</div>
