--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       Obsługa firmowa
     </div>
     <div class="circle" data-key="home">
-      <img src="obsluga_domowa.png" alt="Obsługa domowa">
+      <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
       Obsługa domowa
     </div>
     <div class="circle" data-key="network">
