--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
       <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
       Obsługa firmowa
     </div>
+     <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
     <div class="circle" data-key="home">
       <img src="http://doitwith.it/obsluga_domowa.png" alt="Obsługa domowa">
       Obsługa domowa
